--- a/react.html
+++ b/react.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- Datos con el contenidos que aparece en el navegador -->
-        <h1>React VS Anular</h1>
+        <h1>React VS Angular</h1>
         
         
 
