--- a/react.html
+++ b/react.html
@@ -94,19 +94,19 @@
         <table><caption>Angular vs React</caption>
             <tr>
                 <td>Parametros para Comparar</td>
-                <th>Angular </th>
-                <th>React </th>
-                <th>Ganador </th>
+                <th scope="col">Angular </th>
+                <th scope="col">React </th>
+                <th scope="col">Ganador </th>
             
             </tr>
             <tr>
-                <th>Framework o libreria</th>
+                <th scope="row">Framework o libreria</th>
                 <td>Es un front-end framework  </td>
                 <td>Es una libreria  </td>
                 <td>Tu decides  </td>
             </tr>
             <tr>
-                <th>Rendimiento</th>
+                <th scope="row">Rendimiento</th>
                 <td>Utiliza DOM regular, lo que afecta negativamente al rendimiento
                     de las aplicaciones web </td>
                 <td>Utiliza DOM virtual, lo que afecta positivamente al rendimiento
@@ -114,7 +114,7 @@
                 <td>React </td>
             </tr>
             <tr>
-                <th>Escalabilidad</th>
+                <th scope="row">Escalabilidad</th>
                 <td>Tiene arquitectura modular, lo que ofrece una Escalabilidad
                     sustancial </td>
                 <td>Tiene componentes basados en arquitecturas que ofrecen una buena
@@ -123,7 +123,7 @@
                 <td>Angular </td>
             </tr>
             <tr>
-                <th>Curva de aprendizaje</th>
+                <th scope="row">Curva de aprendizaje</th>
                 <td>Empinada curva de aprendizaje </td>
                 <td>Simple curva de aprendizaje
                 </td>
