--- a/react.html
+++ b/react.html
@@ -93,41 +93,41 @@
         </p>
         <table><caption>Angular vs React</caption>
             <tr>
-                <td>Parametros para Comparar</td>
-                <th scope="col">Angular </th>
-                <th scope="col">React </th>
-                <th scope="col">Ganador </th>
+                <th scope="col" id="parametros">Parametros para Comparar</th>
+                <th scope="col" id="angular">Angular </th>
+                <th scope="col" id="react">React </th>
+                <th scope="col" id="ganador">Ganador </th>
             
             </tr>
             <tr>
-                <th scope="row">Framework o libreria</th>
-                <td>Es un front-end framework  </td>
-                <td>Es una libreria  </td>
-                <td>Tu decides  </td>
+                <th scope="row" id="framework-libreria">Framework o libreria</th>
+                <td headers="framework-libreria">Es un front-end framework  </td>
+                <td headers="framework-libreria">Es una libreria  </td>
+                <td headers="framework-libreria">Tu decides  </td>
             </tr>
             <tr>
-                <th scope="row">Rendimiento</th>
-                <td>Utiliza DOM regular, lo que afecta negativamente al rendimiento
+                <th scope="row" id="rendimiento">Rendimiento</th>
+                <td headers="rendimiento">Utiliza DOM regular, lo que afecta negativamente al rendimiento
                     de las aplicaciones web </td>
-                <td>Utiliza DOM virtual, lo que afecta positivamente al rendimiento
+                <td headers="rendimiento">Utiliza DOM virtual, lo que afecta positivamente al rendimiento
                     de las aplicaciones web</td>
-                <td>React </td>
+                <td headers="rendimiento">React </td>
             </tr>
             <tr>
-                <th scope="row">Escalabilidad</th>
-                <td>Tiene arquitectura modular, lo que ofrece una Escalabilidad
+                <th scope="row" id="escalabilidad">Escalabilidad</th>
+                <td headers="escalabilidad">Tiene arquitectura modular, lo que ofrece una Escalabilidad
                     sustancial </td>
-                <td>Tiene componentes basados en arquitecturas que ofrecen una buena
+                <td headers="escalabilidad">Tiene componentes basados en arquitecturas que ofrecen una buena
                     Escalabilidad.
                 </td>
-                <td>Angular </td>
+                <td headers="escalabilidad">Angular </td>
             </tr>
             <tr>
-                <th scope="row">Curva de aprendizaje</th>
-                <td>Empinada curva de aprendizaje </td>
-                <td>Simple curva de aprendizaje
+                <th scope="row" id="aprendizaje">Curva de aprendizaje</th>
+                <td headers="aprendizaje">Empinada curva de aprendizaje </td>
+                <td headers="aprendizaje">Simple curva de aprendizaje
                 </td>
-                <td>Depende de los conocimientos</td>
+                <td headers="aprendizaje">Depende de los conocimientos</td>
             </tr>
         </table>
     </section> 
